<resources>
    <string name="app_name">MobileADAS</string>

    <!-- MainActivity -->
    <string name="main_speed_title">현재 속도</string>
    <string name="main_speed_unit">km/h</string>
    <string name="main_destination_title">목적지</string>
    <string name="main_distance_title">거리</string>
    <string name="main_distance_unit_km">km</string>
    <string name="main_distance_unit_m">m</string>
    <string name="main_guide_on">경로 안내 종료</string>
    <string name="main_guide_off">경로 안내</string>
    <string name="main_arrival_at_destination">목적지에 도착했습니다.</string>

    <!-- DestinationActivity -->
    <string name="destination_set">네</string>
    <string name="destination_reset">다시 찾기</string>
    <string name="destination_title">어디로 갈까요?</string>
    <string name="destination_location_head">목적지가</string>
    <string name="destination_location_tail">맞나요?</string>
    <string name="destination_find">찾기</string>
    <string name="destination_find_no_result">검색 결과가 없습니다.</string>

    <!-- MainDialogFragment -->
    <string name="dialog_confirm">확인</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_content">경로 안내를 종료하시겠습니까?</string>


    <!-- TFlite-->
    <string name="label_interence_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_max_results">Max Results</string>
    <string name="label_threads">Number of Threads</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">ML Model</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>MobileNet V1</item>
        <item>EfficientDet Lite0</item>
        <item>EfficientDet Lite1</item>
        <item>EfficientDet Lite2</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
