<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="14sp">

        <TextView
            android:id="@+id/tv_main_dialog_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:textColor="@color/black"
            android:text="@string/dialog_content"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_main_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:padding="8dp"
            android:text="@string/dialog_confirm"
            android:textColor="@color/light_red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_main_dialog_content" />

        <TextView
            android:id="@+id/tv_main_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:padding="8dp"
            android:text="@string/dialog_cancel"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/tv_main_dialog_confirm"
            app:layout_constraintTop_toBottomOf="@id/tv_main_dialog_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
