<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="destinationViewModel"
            type="com.ipdla.mobileadas.ui.destination.viewmodel.DestinationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray"
        tools:context=".ui.destination.DestinationActivity">

        <TextView
            android:id="@+id/tv_destination_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/destination_title"
            android:textColor="@color/light_gray"
            android:textSize="28sp"
            android:visibility="@{destinationViewModel.isTyping ? View.VISIBLE: View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <EditText
            android:id="@+id/et_destination_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:ems="15"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:inputType="text"
            android:paddingVertical="5dp"
            android:singleLine="true"
            android:text="@={destinationViewModel.destination}"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            android:visibility="@{destinationViewModel.isTyping ? View.VISIBLE: View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/view_destination_under_bar"
            app:layout_constraintEnd_toStartOf="@id/btn_destination_find"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/view_destination_under_bar" />

        <TextView
            android:id="@+id/btn_destination_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:padding="5dp"
            android:text="@string/destination_find"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            android:visibility="@{destinationViewModel.isTyping ? View.VISIBLE: View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/et_destination_input"
            app:layout_constraintEnd_toEndOf="@id/view_destination_under_bar"
            app:layout_constraintStart_toEndOf="@id/et_destination_input"
            app:layout_constraintTop_toTopOf="@+id/et_destination_input" />

        <View
            android:id="@+id/view_destination_under_bar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/light_gray"
            android:visibility="@{destinationViewModel.isTyping ? View.VISIBLE: View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_destination_location_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/destination_location_head"
            android:textColor="@color/light_gray"
            android:textSize="20sp"
            android:visibility="@{destinationViewModel.isTyping ? View.GONE: View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/tv_destination_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/tv_destination_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:singleLine="true"
            android:text="@{destinationViewModel.destination}"
            android:textColor="@color/light_gray"
            android:textSize="28sp"
            android:visibility="@{destinationViewModel.isTyping ? View.GONE: View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/tv_destination_location_tail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/destination_location_tail"
            android:textColor="@color/light_gray"
            android:textSize="20sp"
            android:visibility="@{destinationViewModel.isTyping ? View.GONE: View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_destination_location"
            app:layout_constraintVertical_bias="0.45" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_destination_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_white_btn"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:paddingTop="12dp"
            android:paddingBottom="15dp"
            android:stateListAnimator="@null"
            android:text="@string/destination_set"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            android:visibility="@{destinationViewModel.isTyping ? View.GONE: View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_destination_reset"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_destination_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_gray_btn"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:paddingTop="12dp"
            android:paddingBottom="15dp"
            android:stateListAnimator="@null"
            android:text="@string/destination_reset"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="@{destinationViewModel.isTyping ? View.GONE: View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_destination_set" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
