<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainViewModel"
            type="com.ipdla.mobileadas.ui.main.viewmodel.MainViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray"
        tools:context=".ui.main.MainActivity">

        <ImageView
            android:id="@+id/iv_main_img_main"
            android:layout_width="140dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:src="@{mainViewModel.isGuide ? @drawable/ic_test : @drawable/ic_test}"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_map_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="65dp"
            android:visibility="@{mainViewModel.isGuide ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/tv_main_speed_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_main_img_main">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/btn_main_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@android:color/transparent"
            android:src="@{mainViewModel.isSoundOn ? @drawable/ic_sound_on : @drawable/ic_sound_off}"
            android:stateListAnimator="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_main_speed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/main_speed_title"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_main_destination_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_main_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-16dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:maxEms="4"
            android:maxLines="1"
            android:text="@{String.valueOf(mainViewModel.speed)}"
            android:textColor="@color/light_gray"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_main_speed_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_main_speed_unit" />

        <TextView
            android:id="@+id/tv_main_speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/main_speed_unit"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_main_speed_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_main_destination_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/main_destination_title"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/tv_main_distance_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_main_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:ellipsize="end"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:maxEms="6"
            android:maxLines="1"
            android:text="@{mainViewModel.isGuide ? mainViewModel.destination : ` - `}"
            android:textColor="@color/light_gray"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_main_destination_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_main_distance_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/main_distance_title"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_main_guide"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_main_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:maxEms="6"
            android:maxLines="1"
            android:text="@{mainViewModel.isGuide ? (mainViewModel.distance >= 1000? String.valueOf(mainViewModel.distance / 1000) : String.valueOf(mainViewModel.distance)) : ` - `}"
            android:textColor="@color/light_gray"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_main_distance_title"
            app:layout_constraintEnd_toStartOf="@id/tv_main_distance_unit" />

        <TextView
            android:id="@+id/tv_main_distance_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:ellipsize="end"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:includeFontPadding="false"
            android:maxEms="6"
            android:maxLines="1"
            android:text="@{mainViewModel.distance >= 1000 ? @string/main_distance_unit_km : @string/main_distance_unit_m}"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_main_distance_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_main_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/shape_white_box"
            android:fontFamily="@font/noto_sans_kr_bold"
            android:includeFontPadding="false"
            android:paddingTop="12dp"
            android:paddingBottom="15dp"
            android:stateListAnimator="@null"
            android:text="@{mainViewModel.isGuide ? @string/main_guide_on : @string/main_guide_off}"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="10dp"
            android:layout_height="40dp"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:background="@android:color/transparent"
            android:keepScreenOn="true"
            app:defaultNavHost="true"
            app:navGraph="@navigation/nav_graph"
            tools:context=".MainActivity" />


        <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
